--- a/EmployeeManagementSystem/appsettings.Development.json
+++ b/EmployeeManagementSystem/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=sql2016.fse.network;Initial Catalog=db_1809152_employeemanagementsystem;User ID=user_db_1809152_employeemanagementsystem;Password=Data Source=sql2016.fse.network;Initial Catalog=db_1809152_employeemanagementsystem;User ID=user_db_1809152_employeemanagementsystem;Password=myhhup-zovxub-9Qedvu;TrustServerCertificate=true"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
